- corrections to the card title spacing

--- a/src/hence-card.scss
+++ b/src/hence-card.scss
@@ -269,10 +269,10 @@ Styleguide 1.2.1
 #titleCentered {
   background: rgba(0, 0, 0, .3);
   bottom: 5px;
-  padding: 5% 20px;
+  padding: 5%;
   position: absolute;
   text-align: center;
-  width: 100%;
+  width: 90%;
 
   .title {
     margin: 0;
